[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/3 Objects/Water.png" type="Texture" id=1]
[ext_resource path="res://assets/3 Objects/tilesetOpenGameBackground.png" type="Texture" id=2]
[ext_resource path="res://assets/3 Objects/Boat.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Level.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Hook.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/3 Objects/tempBG.png" type="Texture" id=8]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -71, 306, 0, 0, 0, 0, 346, 306, 0, 0, 0, 0, 341, 1106, 0, 0, 0, 0, -65, 1104, 0, 0, 0, 0, -71, 309 )
}

[node name="Level" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 137.5, 90.375 )
scale = Vector2( 1.13437, 0.700195 )
texture = ExtResource( 2 )

[node name="Water" type="Sprite" parent="Background"]
position = Vector2( 0.37706, 87.2971 )
scale = Vector2( 3.33595, 2.626 )
texture = ExtResource( 1 )

[node name="HookBG" type="Sprite" parent="Background"]
position = Vector2( 1.32233, 215.119 )
texture = ExtResource( 8 )

[node name="HookBG2" type="Sprite" parent="Background"]
position = Vector2( 1.32233, 1357.66 )
texture = ExtResource( 8 )

[node name="HookBG3" type="Sprite" parent="Background"]
position = Vector2( -0.440758, 1194.85 )
texture = ExtResource( 8 )

[node name="HookBG4" type="Sprite" parent="Background"]
position = Vector2( 1.32233, 1072.02 )
texture = ExtResource( 8 )

[node name="HookBG5" type="Sprite" parent="Background"]
position = Vector2( 1.32233, 917.78 )
texture = ExtResource( 8 )

[node name="HookBG6" type="Sprite" parent="Background"]
position = Vector2( -1.3223, 744.971 )
texture = ExtResource( 8 )

[node name="HookBG7" type="Sprite" parent="Background"]
position = Vector2( 0.440788, 567.877 )
texture = ExtResource( 8 )

[node name="HookBG8" type="Sprite" parent="Background"]
position = Vector2( 1.32233, 393.64 )
texture = ExtResource( 8 )

[node name="Player" parent="." instance=ExtResource( 4 )]
position = Vector2( 130, 103 )

[node name="Boat" type="Sprite" parent="Player"]
position = Vector2( -28, 20 )
texture = ExtResource( 3 )

[node name="CanvasLayer" parent="." instance=ExtResource( 5 )]

[node name="Hook" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 158, 92 )
scale = Vector2( 0.5, 1 )

[node name="CastTimer" type="Timer" parent="."]
one_shot = true

[node name="FishSpawn" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="FishSpawnLocation" type="PathFollow2D" parent="FishSpawn"]
position = Vector2( -71, 306 )

[node name="FishTimer" type="Timer" parent="."]
wait_time = 0.4
autostart = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 151, 214 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -66.0
margin_top = 963.0
margin_right = 247.0
margin_bottom = 991.0
rect_scale = Vector2( 1.29236, 3.92785 )
color = Color( 0.0235294, 0.0196078, 0.0196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="game_over" from="." to="." method="_on_Level_game_over"]
[connection signal="hit" from="Hook" to="." method="_on_Hook_hit"]
[connection signal="missed" from="Hook" to="." method="_on_Hook_missed"]
[connection signal="timeout" from="CastTimer" to="." method="_on_CastTimer_timeout"]
[connection signal="timeout" from="CastTimer" to="Hook" method="_on_CastTimer_timeout"]
[connection signal="timeout" from="FishTimer" to="." method="_on_FishTimer_timeout"]
